<resources>
    <string name="app_name">KatKada</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Plans and Packs</string>
    <string name="nav_movies">View Recharges</string>
    <string name="nav_notifications">Sim Details</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_preference">Preferences</string>
    <string name="nav_simdetails">Sim Details</string>
    <string name="nav_about_us">About Katkada</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_chat_with_us">Chat With us</string>
    <string name="nav_share">Referral</string>
    <string name="nav_view_recharges">View Recharges</string>
    <string name="nav_plan_request_list">Plan Request List</string>
    <string name="SpinnerPrompt">All Operators</string>

    <string name="access_code">Access Code</string>

    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>

    <string name="dialog_exit_caps">Exit</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="dialog_loading_mesg">Please Wait...</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Plans</item>
        <item>View Recharges</item>
        <item>Preferences</item>
        <item>Rate us</item>
        <item>Share</item>
    </string-array>

    <string-array name="spinner_item">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

    <string name="activity_title_about_us">About Katkada</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="some_text">
     Some North American Countries!
 </string>


    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>

    <string name="next_button">Next</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="billingAddress">Billing Address</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="tel">Telephone</string>
    <string name="email">Email Id</string>

    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="card_details">Card Details</string>
    <string name="issuing_bank">Issuing Bank</string>

    <string name="customer_identifier">Customer Identifier</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>


    <string name="forgot_password"> <u>Forgot Password ?</u>  </string>
    <string name="feedback_body"> <H1><b><u>Feedback</u></b></H1>  </string>
    <string name="have_coupon"> <u>Have Coupon Code ?</u>  </string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_no_internet">Internet not available</string>
    <string name="must_be_checked">Please Accept Terms and Conditions</string>
    <string name="progress_loading">LOADING</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">INTELL-RECHARGE</string>
    <string name="slide_1_desc">KATKADA introduces intell-recharge for smart users.
    We break the dynamics of just regular recharge we want to make intell-recharge in a smart way!</string>

    <string name="slide_2_title">Search Plans</string>
    <string name="slide_2_desc">Katkada helps you compare and choose the right plan/pack/rate-cutter within your operator and across all operators. Find the best plan for your phone, best data pack for your datacard or the right 3G/4G pack for your smartphone!</string>

    <string name="slide_3_title">Recommendations</string>
    <string name="slide_3_desc">
Mobile users find it difficult to choose their desired plan at a minimal cost and hence KATKADA has initiated a process that recommends/ suggests a plan of their choice that makes them spend less money!</string>

    <string name="slide_4_title">Recharge</string>
    <string name="slide_4_desc">Enter your mobile number and  make your recharge or bill payment. You can get our special coupons and discounts before making online payment!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="msg_referral"> You can add referral code provided by your friend here to get free credits. If you do not have one or don\'t want to insert they just click on Skip button below.</string>
    <string name="text_your_referral_code">Your referral code</string>
    <string name="text_your_referral_credit">Your referral credit</string>
    <string name="text_share_referral">Share your referral code with friends and get</string>
    <string name="text_share_referral1">referral credits on first recharge.</string>
    <string name="text_referral">Referral</string>
    <string name="text_done">DONE</string>
    <string name="text_referral_bonus">Referral Bonus</string>
    <string name="text_promo_bonus">Promo Bonus</string>
    <string name="text_share">Share</string>
    <string name="text_share_app">Share app!</string>
    <string name="text_take_look_at">Take a look at</string>
    <string name="payment_unit">Rs.</string>
    <string name="text_note_referral">Please take a note of your Referral code</string>
    <string name="text_rate_ride">RATE YOUR RIDE</string>
    <string name="error_empty_rating">Please give rating to Runner.</string>
    <string name="text_share_ref_code">Share Referral Code</string>
</resources>