<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu" >

    <group android:checkableBehavior="single"

        android:id="@+id/mainMenu">
        <item

            android:id="@+id/nav_home"

            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"

            android:title="@string/nav_photos" />


    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu1">
        <item
            android:id="@+id/nav_view_recharges"
            android:title="@string/nav_view_recharges" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu7">
        <item
            android:id="@+id/nav_plan_request_list"
            android:title="@string/nav_plan_request_list" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu2">
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/nav_preference" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu3">
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/nav_rate_us" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu4">
        <item
            android:id="@+id/nav_share"
            android:title="@string/nav_share" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu6">
        <item
            android:id="@+id/nav_feedback"
            android:title="Send Feedback" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu5">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/action_logout" />
    </group>


</menu>